; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfloc.c_DefaultLayoutRTL.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfloc.c_DefaultLayoutRTL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lcid = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DefaultLayoutRTL() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @lcid, align 4
  %3 = call i32 @LANGIDFROMLCID(i32 %2)
  %4 = call i32 @PRIMARYLANGID(i32 %3)
  switch i32 %4, label %7 [
    i32 129, label %5
    i32 128, label %5
  ]

5:                                                ; preds = %0, %0
  %6 = load i32, i32* @TRUE, align 4
  store i32 %6, i32* %1, align 4
  br label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %7, %5
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @PRIMARYLANGID(i32) #1

declare dso_local i32 @LANGIDFROMLCID(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
